--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ h2 {
 }
 
 .threevert {
+  height: 33.3%;
 }
 
 .threehoriz {
@@ -55,6 +56,14 @@ h2 {
   top: 50px;
 }
 
+.label {
+  color: black;
+}
+
+.label:hover {
+  background-color: red;
+  font-size: 140%;
+}
 /* Colors */
 
 /* QUESTION 1 */
@@ -84,25 +93,49 @@ h2 {
 }
 
 .white {
-  background-color: #fff;
+  background-color: white;
 }
 
 .black {
   background-color: #000;
 }
 
+.red {
+  background-color: red;
+}
+
+#white {
+  background-color: white;
+}
+
+.light-blue {
+  background-color: lightblue;
+}
+
+.white-twovert {
+  height: 50%;
+  background-color: white;
+  box-sizing: border-box;
+}
+
 /* BEGIN QUESTION 2 */
 
 .thailand-red {
-  /* TODO */
+  height: 14.3%;
+  background-color: #B5002D;
+  box-sizing: border-box;
 }
 
 .thailand-white {
-  /* TODO */
+  height: 14.3%;
+  background-color: white;
+  box-sizing: border-box;
 }
 
 .thailand-blue {
-  /* TODO */
+  height: 42.8%;
+  background-color: #2E2A4C;
+  box-sizing: border-box;
 }
 
 /* END QUESTION 2 */
@@ -111,14 +144,17 @@ h2 {
 
 .romania-blue {
   background-color: #002c84;
+  box-sizing: border-box;
 }
 
 .romania-yellow {
   background-color: #ffcf00;
+  box-sizing: border-box;
 }
 
 .romania-red {
   background-color: #e10017;
+  box-sizing: border-box;
 }
 
 /* END QUESTION 3 */
@@ -129,7 +165,9 @@ h2 {
 }
 
 .mexico-img {
-  /* TODO */
+  max-height: 50%;
+  max-width: 33.4%;
+  align-self: center;
 }
 
 .mexico-red {
